    The idle scan is a process to cycles through all multiplex to check
    the quality for each mux continously.

  * Hopefully fix some rounding errors in the EPG display. Ticket #69

  * Use a ''livegrid'' (http://www.ext-livegrid.com/) for displaying EPG.

  * Remove configuration and settings (/home/hts/.hts/tvheadend) on a 
    deb package purge operation. Ticket #73

hts-tvheadend (2.2) hts; urgency=low

  * Set $HOME so forked processes (XMLTV) will have correct environment
    and to make the default storage of recorded videos to end up in the
    correct place.

  * Update built-in DVB mux presets to dvb-apps:1275:9655c8cfeed8

  * Add -h option to display usage.

  * Rewrite the internal streaming pipeline.
    This is not externally visible, but needed for a future timeshifter.

  * Make it compile on gcc 4.4

  * Send 'source' and 'network' information in HTSP.subscriptionStart message.

  * When deleting a channel any channel-bound autorecording would stay in
    memory and, sooner or later, cause a crash. This has now been fixed.

  * Add extra scan for XMLTV grabbers in $PATH. Apart from $PATH we also
    scan in /bin, /usr/bin, /usr/local/bin

  * Search for XMLTV grabbers in /usr/bin/perlbin/vendor (archlinux)

  * Fix a bug causing DVB card which does not implement the 
    FE_READ_UNCORRECTED_BLOCKS operation to report insane amount of
    forward correction errors.

-- Andreas Öman <andreas@lonelycoder.com>  Sun, 07 Jun 2009 19:22:49 +0200

hts-tvheadend (2.1) hts; urgency=low

  * Add debconf setup scripts to create a superuser account.
	
  * HTSP server slightly modified. Now also supports the XBMC HTSP client.
	
  * tvheadend and showtime went separate ways.
	
  * tvheadend: Record post-processing added again, run command when a
    recording is done.

  * tvheadend: Fix characterset translation bug introduced in r1902.

 -- Andreas Öman <andreas@lonelycoder.com>  Thu, 28 May 2009 21:07:44 +0200

hts-tvheadend (2.0) unstable; urgency=low
